Change styles to matchs page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,79 +1,31 @@
 <div class="flex mt-3">
-    <div class="row">
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation" *ngFor="let rankingGroup of rankingGroups">
-                <a class="nav-link" [class.active]="rankingGroup.active == true" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">{{rankingGroup.name}}</a>
-            </li>
-        </ul>
+    <div class="row justify-content-start">
+        <div class="col-0 mt-1">
+            <select name="selectPhases" [(ngModel)]="SelectedPhase">
+                <option [value]="phase" *ngFor="let phase of rankingPhases">{{phase.name}}</option>
+            </select>
+        </div>
+        <div class="col-8">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation" *ngFor="let rankingGroup of rankingGroups">
+                    <a class="nav-link" [class.active]="rankingGroup.active == true" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">{{rankingGroup.name}}</a>
+                </li>
+            </ul>
+        </div>
+        <!-- <div class="col">
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item" role="presentation" *ngFor="let rankingGroup of rankingGroups">
+                    <a class="nav-link" [class.active]="rankingGroup.active == true" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">{{rankingGroup.name}}</a>
+                </li>
+            </ul>
+        </div> -->
     </div>
 
     <div class="d-flex">
         <div class="row justify-content-md-center">
-            <div class="card match" *ngFor="let match of rankingGroupMatches; index as i">
-                <div class="card-header d-flex justify-content-between align-items-center">
-                    Partido: no jugado
-                    <button type="button" class="btn btn-sm btn-primary">Button</button>
-                </div>
-                <div class="container-fluid">
-                    <div class="row mt-2">
-                        <div class="col-10 couple1">
-                            <p class="long-and-truncated" *ngFor="let user of match.couple1.playerNames">{{user}}</p>
-                        </div>
-                        <div class="col-2">
-                            <h5 class="text-primary" *ngIf='match.couple1Set1Result!==null'>{{ match.couple1Set1Result }}</h5>
-                            <h5 class="text-primary" *ngIf='match.couple1Set1Result===null'>-</h5>
-                        </div>
-                    </div>
-                    <hr class="m-1" />
-                    <div class="row mt-2">
-                        <div class="col-10 couple2">
-                            <p class="long-and-truncated" *ngFor="let user of match.couple2.playerNames ">{{user}}</p>
-                        </div>
-                        <div class="col-2">
-                            <h5 class="text-primary" *ngIf='match.couple2Set1Result!==null'>{{ match.couple1Set1Result }}</h5>
-                            <h5 class="text-primary" *ngIf='match.couple2Set1Result===null'>-</h5>
-                        </div>
-                    </div>
-                </div>
-                <!-- <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <p class="long-and-truncated" *ngFor="let user of match.couple1.playerNames ">{{user}}</p>
-                    </li>
-                    <li class="list-group-item">
-                        <p class="long-and-truncated" *ngFor="let user of match.couple2.playerNames ">{{user}}</p>
-                    </li>
-
-                </ul> -->
-                <!-- <div class="card-body">
-                    <h5 class="card-title">{{rg.name}}</h5>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item py-1" *ngFor="let c of rg.couples">
-                            <ul class="list-group align-items-center" *ngFor="let player of c.users">
-                                <li class="list-group-item py-0"><small>{{player.playerName}}</small></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div> -->
+            <div class="col col-xl-3" *ngFor="let match of rankingGroupMatches; index as i">
+                <app-match-card [data]="match"></app-match-card>
             </div>
         </div>
     </div>
-    <!-- <div class="flex ">
-        <div class="row match mt-1 " *ngFor="let match of rankingGroupMatches ">
-            <div class="col-5 text-center mt-2 ">
-                <p class="long-and-truncated " *ngFor="let user of match.couple1.playerNames ">{{user}}</p>
-            </div>
-            <div class="col-1 matchResultLeft bg-primary ">
-                <h3 class="text-light " *ngIf='match.couple1Set1Result!==null'>{{ match.couple1Set1Result }}</h3>
-                <h3 class="text-light " *ngIf='match.couple1Set1Result===null'>-</h3>
-            </div>
-
-            <div class="col-1 matchResultRight bg-primary ">
-                <h3 class="text-light " *ngIf='match.couple2Set1Result!==null'>{{ match.couple2Set1Result }}</h3>
-                <h3 class="text-light " *ngIf='match.couple2Set1Result===null'>-</h3>
-            </div>
-            <div class="col-5 text-center mt-2 ">
-                <p class="long-and-truncated " *ngFor="let user of match.couple2.playerNames ">{{user}}</p>
-            </div>
-        </div>
-    </div> -->
 </div>
