--- a/src/app/components/home/pages/match-card/match-card.component.scss
+++ b/src/app/components/home/pages/match-card/match-card.component.scss
@@ -35,9 +35,11 @@ p {
 }
 
 .long-and-truncated {
-    // flex: 1;
-    // white-space: nowrap;
-    // overflow: hidden;
-    text-overflow: ellipsis;
+    flex: 1;
+    white-space: nowrap;
+    line-height: 1;
+    font-size: smaller;
+    overflow: hidden;
     margin-bottom: 2px;
+    text-overflow: ellipsis;
 }
