--- a/src/app/components/home/pages/match-card/match-card.component.scss
+++ b/src/app/components/home/pages/match-card/match-card.component.scss
@@ -43,3 +43,9 @@ p {
     margin-bottom: 2px;
     text-overflow: ellipsis;
 }
+
+.disabled {
+    pointer-events: none;
+    /* for "disabled" effect */
+    opacity: 0.5;
+}
