--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="flex mt-3">
     <div class="row justify-content-start">
         <div class="col-0 mt-1">
-            <select name="selectPhases" [(ngModel)]="SelectedPhase">
+            <select class="form-control" name="selectPhases" [(ngModel)]="SelectedPhase">
                 <option [value]="phase" *ngFor="let phase of rankingPhases">{{phase.name}}</option>
             </select>
         </div>
         <div class="col-8">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation" *ngFor="let rankingGroup of rankingGroups">
-                    <a class="nav-link" [class.active]="rankingGroup.active == true" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">{{rankingGroup.name}}</a>
+                    <a class="nav-link" [class.active]="rankingGroup.active == true" id="pills-home-tab" (click)="rankingGroupChanged(rankingGroup)" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">{{rankingGroup.name}}</a>
                 </li>
             </ul>
         </div>
@@ -24,7 +24,7 @@
     <div class="d-flex">
         <div class="row justify-content-md-center">
             <div class="col col-xl-3" *ngFor="let match of rankingGroupMatches; index as i">
-                <app-match-card [data]="match"></app-match-card>
+                <app-match-card [data]="match" (editingStarted)="onMatchEditingChanged($event)"></app-match-card>
             </div>
         </div>
     </div>
