add generation of classification and classification page

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -6,6 +6,9 @@
     <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item" routerLinkActive='active' *ngIf="user">
+                <a class="nav-link" routerLink="classification">Clasificación</a>
+            </li>
+            <li class="nav-item" routerLinkActive='active' *ngIf="user">
                 <a class="nav-link" routerLink="rankings">Rankings</a>
             </li>
             <li class="nav-item" routerLinkActive='active' *ngIf="user">
